# sundials

./: .clang-format  CMakeLists.txt
cmake/: SundialsBuildOptionsPost.cmake  SundialsDeprecated.cmake  SundialsSetupTPLs.cmake  SundialsTPLOptions.cmake
cmake/macros/: SundialsAddLibrary.cmake
cmake/tpl/: FindSUPERLU_SERIAL.cmake  SundialsSuperLU.cmake  SundialsSuperLUSERIAL.cmake
examples/: CMakeLists.txt
examples/arkode/C_serial/: CMakeLists.txt  ark_brusselator1D_FEM_slu.c  ark_brusselator1D_FEM_slu_serial.c
examples/cvode/serial/: CMakeLists.txt  cvRoberts_sps.c  cvRoberts_sps_serial.c
examples/cvodes/serial/: CMakeLists.txt  cvsRoberts_ASAi_sps.c  cvsRoberts_ASAi_sps_serial.c  cvsRoberts_FSA_sps.c  cvsRoberts_FSA_sps_serial.c  cvsRoberts_sps.c  cvsRoberts_sps_serial.c
examples/ida/serial/: CMakeLists.txt  idaRoberts_sps.c  idaRoberts_sps_serial.c
examples/idas/serial/: CMakeLists.txt  idasRoberts_ASAi_sps.c  idasRoberts_ASAi_sps_serial.c  idasRoberts_FSA_sps.c  idasRoberts_FSA_sps_serial.c  idasRoberts_sps.c  idasRoberts_sps_serial.c
examples/kinsol/serial/: CMakeLists.txt  kinFerTron_slu_serial.c  kinRoboKin_eigen_sparse.cpp  kinRoboKin_more_eigen_sparse.cpp  kinRoboKin_slu.c  kinRoboKin_slu_serial.c  kinRoboKin_slu_serial_cpp.cpp
examples/sunlinsol/: CMakeLists.txt
examples/sunlinsol/superlu/: test_sunlinsol_superlu.c
examples/sunlinsol/superlu_serial/: CMakeLists.txt  test_sunlinsol_superlu_serial.c
examples/sunmatrix/: CMakeLists.txt
examples/sunmatrix/eigensparse/: CMakeLists.txt  test_sunmatrix_eigensparse.c
include/sundials/: sundials_linearsolver.h  sundials_matrix.h
include/sunlinsol/: sunlinsol_eigen_sparse.h  sunlinsol_superlu.h  sunlinsol_superlu_serial.h
include/sunmatrix/: sunmatrix_eigensparse.h
src/sunlinsol/: CMakeLists.txt
src/sunlinsol/eigen_sparse/: CMakeLists.txt  sunlinsol_eigen_sparse.cpp
src/sunlinsol/superlu/: sunlinsol_superlu.c
src/sunlinsol/superlu_serial/: CMakeLists.txt  sunlinsol_superlu_serial.c
src/sunlinsol/superlumt/: sunlinsol_superlumt.c
src/sunmatrix/: CMakeLists.txt
src/sunmatrix/eigensparse/: CMakeLists.txt  sunmatrix_eigensparse.cpp
